# 2minites

./: .gitignore  README.md
2022/0806_pytest_hypothesis/: .gitignore  pyproject.toml  sort.py
2022/0810_googlekeep/: keep2doc.py  pyproject.toml
2022/0811_gsheet/: gsheet.py  pyproject.toml  quickstart.py
2022/0817_scraping/: pyproject.toml  scraper.py
2022/0818_co-routine/: async.py  coroutine01.py  pyproject.toml
2022/0903_python_sort/: heap_sort.py  insertion_sort.py  merge_sort.py  pyproject.toml  quick_sort.py  selection_sort.py
2022/fluent_python/: cp01_deck.py  cp01_repr.py  cp02_array.py  cp02_bisect.py  cp02_cartesian.py  cp02_deque.py  cp02_iadd.py  cp02_list.py  cp02_memoryview.py  cp02_namedtuple.py  cp02_numpy.py  cp02_slice.py  cp02_sort.py  cp02_tuple.py  cp03_dict.py  cp03_set.py  cp03_userdict.py  cp04_byte.py  cp04_codec.py  cp04_simplefile.py  cp04_strandbytes.py  cp04_unicode_db.py  cp04_unicode_sort.py  cp05_defaultargs.py  cp05_factorial.py  cp05_funcclass.py  cp05_highorderfunc.py  cp05_itemgetter_partial.py  cp05_kwargs.py  cp07_closure.py  cp07_decorate_base.py  cp07_decorator_param.py  cp07_decorator_param2.py  cp07_decorator_promo.py  cp07_decorator_simple.py  cp07_lrucache.py  cp07_singledispatch.py  cp07_var_scope.py  cp08_alias.py  cp08_args.py  (+30 more)
2022/fluent_python/libs/: clock.py  cp08_default_param.py  cp11_subclass.py  cp14_yieldfrom.py  cp16_taxi.py  cp17_loiter.py
2022/hello_rust/hello/src/: main.rs
2022/jantama/: jantama.py  pyproject.toml
2022/scripts/: password_generator.py  pyproject.toml
