[tool.poetry]
name = "0810_googlekeep"
version = "0.1.0"
description = ""
authors = ["s17er <sinnerthesinner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gkeepapi = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
