[tool.poetry]
name = "fluent_python"
version = "0.1.0"
description = ""
authors = ["s17er <sinnerthesinner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
requests = "^2.29.0"
tqdm = "^4.65.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
